--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
         maven { url "https://www.jitpack.io" }
         maven { url 'https://maven.google.com' }
     }
